# lazysql

./: .gitignore  .woodpecker.yml  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  build.rs  docker-compose.yml  flake.nix  init.sql  init_mysql.sql  justfile
.cargo/: config.toml
docs/superpowers/specs/: 2026-05-15-theme-system-design.md
init/: mysql.sql  postgres.sql
src/: config.rs  db.rs  handlers.rs  main.rs  state.rs  themes.rs  ui.rs
src/config/: storage.rs
src/db/: postgres.rs  repo.rs
src/db/mysql/: init.rs  sql.rs
src/db/postgres/: connection.rs  init.rs  sql.rs  tables.rs
src/db/repo/: db_repo.rs  sql_repo.rs  tables_repo.rs
src/state/: app.rs  app_state.rs  connect.rs  form.rs  inspect.rs  mode.rs  navigation.rs  picker.rs  records.rs  router.rs  search.rs  sql_input.rs
src/state/connection/: form.rs  mod.rs
src/state/records/: mod.rs
src/themes/: builtin.rs  init.rs  palette.rs  picker.rs  storage.rs
src/ui/: format.rs  layout.rs  screens.rs  theme.rs  widgets.rs
src/ui/screens/: add_connection.rs  connect.rs  database.rs  inspect.rs  records.rs  schemas.rs  table_view.rs  tables.rs
src/ui/widgets/: components.rs  help.rs  hintbar.rs  search.rs  sql.rs  sql_editor.rs  statusbar.rs  theme_picker.rs
src/ui/widgets/components/: picker.rs
themes/: catppuccin-mocha.toml  dracula.toml  everforest.toml  gruvbox-baby.toml  gruvbox-material.toml  gruvbox.toml  tokyo-night.toml
