[package]
name = "lazy-sql"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.1", features = ["full"] }
tokio-postgres = "0.7.16"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4.5"
tempfile = "3"
