[package]
name = "lazysql"
version = "1.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tokio-postgres = { version = "0.7.16", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
] }
serde_json = "1"
chrono = "0.4"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"
futures = "0.3"
sqlparser = "0.62"
mysql_async = { version = "0.36.2", features = ["default"] }

[dev-dependencies]
tokio-test = "0.4.5"
tempfile = "3.27"
